force-app/main/default/objects/Hygiene_Quote_Flag__c/Hygiene_Quote_Flag__c.object-meta.xml
        <CustomObject>
          <label>Hygiene Quote Flag</label>
          <pluralLabel>Hygiene Quote Flags</pluralLabel>
          <description>Per-Apttus-proposal hygiene finding. Stale quotes, stuck approvals.</description>
          <sharingModel>ReadWrite</sharingModel>
          <nameField>
  <label>Auto Number</label>
  <type>AutoNumber</type>
  <displayFormat>HYG-{0000000}</displayFormat>
</nameField>
        </CustomObject>