force-app/main/default/objects/Hygiene_Quote_Flag__c/fields/Age_Days__c.field-meta.xml
    <CustomField>
      <fullName>Age_Days__c</fullName>
      <label>Age (days since created)</label>
      <type>Number</type>
      <precision>6</precision>
<scale>0</scale>
    </CustomField>