force-app/main/default/objects/Hygiene_Quote_Flag__c/fields/Approval_Stage__c.field-meta.xml
<CustomField>
  <fullName>Approval_Stage__c</fullName>
  <label>Approval Stage (denorm)</label>
  <type>Text</type>
  <length>80</length>
</CustomField>