force-app/main/default/objects/Hygiene_Quote_Flag__c/fields/Last_Modified_Days__c.field-meta.xml
    <CustomField>
      <fullName>Last_Modified_Days__c</fullName>
      <label>Days Since Last Modified</label>
      <type>Number</type>
      <precision>6</precision>
<scale>0</scale>
    </CustomField>