force-app/main/default/objects/Hygiene_Quote_Flag__c/fields/Metric_Key__c.field-meta.xml
<CustomField>
  <fullName>Metric_Key__c</fullName>
  <label>Metric Key</label>
  <type>Text</type>
  <required>true</required>
  <length>80</length>
</CustomField>