force-app/main/default/objects/Hygiene_Quote_Flag__c/fields/Quote__c.field-meta.xml
    <CustomField>
      <fullName>Quote__c</fullName>
      <label>Apttus Proposal</label>
      <type>Lookup</type>
      <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
<relationshipName>HygieneQuoteFlags</relationshipName>
<deleteConstraint>SetNull</deleteConstraint>
    </CustomField>